k8s/alb-ingress-curl-workaround.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipask-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: ipask-ingress-group
    alb.ingress.kubernetes.io/group.order: "0"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/actions.bypass-ssl: >
      {"type":"forward", "forwardConfig":{"targetGroups":[{"serviceName":"ipask-svc", "servicePort":"8080", "weight":1}]}}
    alb.ingress.kubernetes.io/conditions.bypass-ssl: >
      [{"field":"http-header", "httpHeaderConfig":{"httpHeaderName":"User-Agent", "values":["curl/*"]}}]
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"protocol":"HTTPS","port":"443","statusCode":"HTTP_301"}}
spec:
  ingressClassName: "alb"
  rules:
    - host: ipask.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bypass-ssl
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-https
                port:
                  name: use-annotation
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipask-ingress-secure
  annotations:
    alb.ingress.kubernetes.io/group.name: ipask-ingress-group
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/certificate-arn: ${AWS_IAM_CERT_ARN}
spec:
  ingressClassName: "alb"
  rules:
    - host: ipask.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipask-svc
                port:
                  number: 8080
