k8s/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipask-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: ${AWS_IAM_CERT_ARN}
spec:
  ingressClassName: "alb"
  rules:
    - host: ipask.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipask-svc
                port:
                  number: 8080
